5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1723_2499.log
== TEST (2019-05-09 11:48:03) 
-- CODE:
from math import*
i=1
soma=1
k=int(input("digite um numero"))
while(i<k):
	soma=soma+(1/factorial(i))
	i=i+1

print(round(soma,8))

-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:48:15) 
-- CODE:
from math import*
i=1
soma=1
k=int(input("digite um numero"))
while(i<k):
	soma=soma+(1/factorial(i))
	i=i+1

print(round(soma,8))

-- EXECUTION TIME:
0.167064
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:20:02) 
-- CODE:
k=int(input("digite um numero: "))
i=0
soma=0
while(i<k):
	soma=soma+(1+1/factorial(i))
	i=i+1
print(round(soma,8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma=soma+(1+1/factorial(i))
NameError: name 'factorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:20:32) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
i=0
soma=0
while(i<k):
	soma=soma+(1+1/factorial(i))
	i=i+1
print(round(soma,8))

-- OUTPUT:
9.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:20:57) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
i=0
soma=0
while(i<k):
	soma=soma+(1/factorial(i))
	i=i+1
print(round(soma,8))

-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 16:21:23) 
-- CODE:
from math import*
k=int(input("digite um numero: "))
i=0
soma=0
while(i<k):
	soma=soma+(1/factorial(i))
	i=i+1
print(round(soma,8))

-- EXECUTION TIME:
0.1305
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
